# openapi.yaml
@@ -87,7 +87,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
         '403':
-          description: The user is not allowed to access the transaction
+          description: The user is not allowed to create the bank account
           content:
             application/json:
               schema:
@@ -278,6 +278,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
+        '409':
+          description: Bank account cannot be deleted while transactions exist
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
         '500':
           description: An unexpected error occurred
           content:
@@ -328,7 +334,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
         '403':
-          description: The user is not allowed to delete the bank account details
+          description: The user is not allowed to access the transaction
           content:
             application/json:
               schema:
@@ -340,7 +346,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
         '422':
-          description: Insufficient funds to process transaction
+          description: Transaction could not be processed
           content:
             application/json:
               schema:
